core_backend/.helm/templates/002-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kda-hack-core-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /kda_hack(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: kda-hack-core-backend
                port:
                  number: 8000
